[package]
name = "vkguide"
version = "0.0.1"
authors = ["Michael Phillips <mrclean71774@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lina = { git = "https://github.com/mrclean71774/lina" }
sdl2 = { git = "https://github.com/mrclean71774/sdl2" }
vkcapi = { git = "https://github.com/mrclean71774/vkcapi" }
vkcboot = { git = "https://github.com/mrclean71774/vkcboot" }
vma = { git = "https://github.com/mrclean71774/vma" }
